commit changes with tech stack logos

--- a/.github/workflows/waka-coding-stats-workflow.yml
+++ b/.github/workflows/waka-coding-stats-workflow.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-readme:
-    name: Updates this repo's README
+    name: WakaReadme DevMetrics
     runs-on: ubuntu-latest
     steps:
       - uses: athul/waka-readme@master
